RTC integration and spiffs logging of sensor

--- a/html/automate.html
+++ b/html/automate.html
@@ -121,7 +121,7 @@
             <option value="12">December</option>
           </select>
           <br>
-          <label for="day">Day:</label>
+          <label for="day">Day of the month:</label>
           <select id="day" name="day">
             <option value="0">Any</option>
             <option value="1">1</option>
@@ -155,6 +155,18 @@
             <option value="29">29</option>
             <option value="30">30</option>
             <option value="31">31</option>
+          </select>
+          <br>
+          <label for="day">Day of the week:</label>
+          <select id="day" name="day">
+            <option value="0">Any</option>
+            <option value="1">Sunday</option>
+            <option value="2">Monday</option>
+            <option value="3">Tuesday</option>
+            <option value="4">Wednesday</option>
+            <option value="5">Thursday</option>
+            <option value="6">Friday</option>
+            <option value="7">Saturday</option>
           </select>
           <br>
           <label for="time">Time:</label>
