fix history data not fetching

--- a/html/history.html
+++ b/html/history.html
@@ -74,7 +74,7 @@
     <script src="general.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts@latest"></script>
     <script>
-      var url = `${window.location.hostname}/historydata.hemcs`;
+      var url = "/historydata.hemcs";
       window.addEventListener('load', onLoad);
 
       function fetchAndPrintTextFile(url) {
