--- a/html/settings.html
+++ b/html/settings.html
@@ -78,15 +78,15 @@ input:checked + .slider:before {
 
     <div id="sidebar">
         <div class="icon">
-            <a href="overview">
+            <a href="overview.html">
                 <svg height="16" width="16" viewBox="0 0 512 512"><path opacity="1" fill="#1E3050" d="M332.8 320h38.4c6.4 0 12.8-6.4 12.8-12.8V172.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v134.4c0 6.4 6.4 12.8 12.8 12.8zm96 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v230.4c0 6.4 6.4 12.8 12.8 12.8zm-288 0h38.4c6.4 0 12.8-6.4 12.8-12.8v-70.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v70.4c0 6.4 6.4 12.8 12.8 12.8zm96 0h38.4c6.4 0 12.8-6.4 12.8-12.8V108.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v198.4c0 6.4 6.4 12.8 12.8 12.8zM496 384H64V80c0-8.8-7.2-16-16-16H16C7.2 64 0 71.2 0 80v336c0 17.7 14.3 32 32 32h464c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16z"/></svg>
                 <span id="w">Overview</span>
             </a>
-            <a href="history">
+            <a href="history.html">
                 <svg height="16" width="16" viewBox="0 0 512 512"><path opacity="1" fill="#1E3050" d="M75 75L41 41C25.9 25.9 0 36.6 0 57.9V168c0 13.3 10.7 24 24 24H134.1c21.4 0 32.1-25.9 17-41l-30.8-30.8C155 85.5 203 64 256 64c106 0 192 86 192 192s-86 192-192 192c-40.8 0-78.6-12.7-109.7-34.4c-14.5-10.1-34.4-6.6-44.6 7.9s-6.6 34.4 7.9 44.6C151.2 495 201.7 512 256 512c141.4 0 256-114.6 256-256S397.4 0 256 0C185.3 0 121.3 28.7 75 75zm181 53c-13.3 0-24 10.7-24 24V256c0 6.4 2.5 12.5 7 17l72 72c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-65-65V152c0-13.3-10.7-24-24-24z"/></svg>
                 <span id="w">History</span>
             </a>
-            <a href="automate">
+            <a href="automate.html">
                 <svg height="16" width="20" viewBox="0 0 640 512"><path opacity="1" fill="#1E3050" d="M320 0c17.7 0 32 14.3 32 32V96H472c39.8 0 72 32.2 72 72V440c0 39.8-32.2 72-72 72H168c-39.8 0-72-32.2-72-72V168c0-39.8 32.2-72 72-72H288V32c0-17.7 14.3-32 32-32zM208 384c-8.8 0-16 7.2-16 16s7.2 16 16 16h32c8.8 0 16-7.2 16-16s-7.2-16-16-16H208zm96 0c-8.8 0-16 7.2-16 16s7.2 16 16 16h32c8.8 0 16-7.2 16-16s-7.2-16-16-16H304zm96 0c-8.8 0-16 7.2-16 16s7.2 16 16 16h32c8.8 0 16-7.2 16-16s-7.2-16-16-16H400zM264 256a40 40 0 1 0 -80 0 40 40 0 1 0 80 0zm152 40a40 40 0 1 0 0-80 40 40 0 1 0 0 80zM48 224H64V416H48c-26.5 0-48-21.5-48-48V272c0-26.5 21.5-48 48-48zm544 0c26.5 0 48 21.5 48 48v96c0 26.5-21.5 48-48 48H576V224h16z"/></svg>
                 <span id="w">Automate</span>
             </a>
@@ -114,8 +114,10 @@ input:checked + .slider:before {
             <div class="card">Set time automatically<label class="switch"><input type="checkbox" onchange="toggleautotime(this)" id="auto_t"><span class="slider"></span></label></div>
             <div class="card">Set time <input type="datetime-local" id="select-datetime"></div>
             <div class="card">Storage: <p>Total: <span id="totalstorage">...</span></p> <p>Used: <span id="usedstorage">...</span></p> <p>Free: <span id="freestorage">...</span></p><div><button class="button" onclick="deleteHistoryData()">Delete History</button></div></div>
+            <div class="card" id="wifi">Connect other device<div><p>Device connected: <span id="device-connected">...</span></p></div></div>
             <button class="button" onclick="reboot()">Reboot</button>
             <button class="button" onclick="resetMeter()" style="background-color: rgb(170, 0, 0);">Reset Meter</button>
+            
     </div>
 
 <script src="general.js"></script>
@@ -162,7 +164,6 @@ document.getElementById('wifi').addEventListener('click', function() {
     var passwordRegex = /^.{8,60}$/;
     var ssid = prompt('Enter WiFi Name:');
     if (ssid !== null) {
-        // Check if SSID matches the pattern
         if (!ssidRegex.test(ssid)) { 
             alert('Invalid WiFi name. Enter 1-32 characters only');
             return; 
@@ -186,18 +187,14 @@ document.getElementById('hotspot').addEventListener('click', function() {
     var passwordRegex = /^.{8,60}$/;
 
     var ssid = prompt('Enter Hotspot Name (up to 10 characters):');
-    // Check if user hasn't cancelled the SSID prompt
     if (ssid !== null) { 
-        // Check if SSID matches the pattern
         if (!ssidRegex.test(ssid)) { 
             alert('Invalid Hotspot Name. Please enter up to 10 characters, using only alphanumeric characters, _, - and space.');
             return;
         }
 
         var password = prompt('Enter WiFi Password (at least 8 and up to 10 characters):');
-         // Check if user hasn't cancelled the password prompt
         if (password !== null) {
-            // Check if password matches the pattern
             if (!passwordRegex.test(password)) { 
                 alert('Invalid Hotspot password. Password must be at least 8 characters long.');
                 return;
@@ -269,7 +266,7 @@ function deleteHistoryData() {
         updateSettings(47);
     }
 }
-// function for sending socket message
+
 function updateSettings(cmd, a, b) {
     try {
         var socket_data = ":=:" + cmd + ":=:" + a + ":=:" + b + ":=:";
